# modernauth-backend

./: .env.example  .gitignore  LICENSE.md  Procfile  README.md  add_server.py  admin_db.py  app.py  controls.py  database.json  database.py  main.py  pyproject.toml  reference.py  requirements.txt  server_config.json  server_config.py  setup.py  simulate_plugin.py  style.css  testdb.py  tokensystem.json  tokensystem.py  userdb.py  users.db
assets/: style.css
data/: admindb.json  database.json  server_config.json  tokensystem.json
docs/: requirements.txt
docs/source/: auth_status.rst  conf.py  create_token.rst  index.rst  is_user.rst
docs/source/_static/: custom.css
src/modernauth/: app.py
src/modernauth/assets/: style.css
src/modernauth/db/: admin_db.py  server_config.py  tokensystem.py  userdb.py
src/modernauth/scripts/: cli.py  cli_functions.py  controls.py  simulate.py
src/modernauth/templates/: admin.html  developers.html  error.html  home.html  settings.html  success.html  whoweare.html
template/: home.html  success.html
templates/: 404.html  admin.html  error.html  home.html  import_users.html  manage_servers.html  settings.html  success.html  whoweare.html
