[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modernauth"
version = "1.2.0"
description = "ModernAuthentication service for Minecraft Spigot plugin"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Flask",
  "Authlib",
  "python-dotenv",
  "SQLAlchemy",
  "PyMySQL",
  "Flask-Limiter",
]

[project.scripts]
modernauth = "modernauth.scripts.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
